# session-info2

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.ipynb
docs/_static/: custom.css
src/session_info2/: __init__.py  _dists.py  _pu.py  _repr.py  cli.py
tests/: test_cli.py  test_synthetic.py
